--- a/src/Chat.css
+++ b/src/Chat.css
@@ -39,9 +39,15 @@
     border-radius: 10px;
     background-color: #ffffff;
     margin-bottom: 30px;
+    
 }
 
 .chat_reciever{
+    margin-left: auto;
+    background-color: #dcf8c6;
+}
+
+.chat_sender{
     margin-left: auto;
     background-color: #dcf8c6;
 }
@@ -74,7 +80,7 @@
     border-radius: 30px;
     padding: 10px;
     border: none;
-    outline: none;
+    outline-width: 0;
 }
 
 .chat_footer > form > button{
